# 3D-vol-est-yolov8

./: .gitattributes  README.md  requirements.txt  run_vol_estimation.py  setup.cfg
vol_est_yolov8/: __init__.py  process_vol_est_main.py
vol_est_yolov8/analyze_segments/: calc_2d_cog_binary_mask.py
vol_est_yolov8/converter/: __init__.py  converter_result_to_json.py
vol_est_yolov8/extract_skeleton/: extract_skeleton_w_cogs.py  polynom_regression_in_mask.py
vol_est_yolov8/length_estimation/: utils_vol_estimation.py
vol_est_yolov8/plotting/: __init__.py  inference_results.py  volume_visualizer.py
vol_est_yolov8/utils/: __init__.py  load_json_annotation.py
