[metadata]
name = vol_est_yolov8
version = 1.0
author = <Joshua Albiez>
author_email = joshua.albiez3@gmail.com
description = A package to estimate 3D volume of an object leveraging instance segmentation
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = vol_est_yolov8